Added gradle and adjusted code