@@ -6,19 +6,17 @@ The basics: [see this great blog](http://mnemstudio.org/path-finding-q-learning-
 
 Dive in: [see this great book](https://mitpress.mit.edu/books/reinforcement-learning).
 
+## Run
+
+`./gradlew run`
+
+`java --module-path /usr/share/openjfx/lib --add-modules javafx.web,javafx.controls,javafx.fxml -cp build/libs/qmaze-1.0-SNAPSHOT.jar qmaze.QMaze`
+
 ## Reinforcement Learning?
 
 Yes. This is a branch of Machine Learning, considered distinct from Supervised and Unsupervised Learning.
 Instead of looking for hidden structure, like unsupervised Clustering algorithms, we're trying to maximise a reward structure. We have an agent (here, the robot) in an unknown environment (here, the maze). There is a goal that the agent needs to reach: when they do reach it, it's obvious.
 We find the goal with a trade off between exploration and exploitation. To get a lot of reward, the robot has to prefer actions that it has already tried and tested. But it has to explore to make better selections in the future.
-
-## Get started
-
-You will need: [Java 8](http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) and preferably, [Netbeans](https://netbeans.org/) which has support for JavaFX projects and Ant.
-
-Once you have coded things, either build the jar using build.xml, then run `java -jar dist/QMaze.jar` or (in an IDE) run the project from src/qmaze/QMaze.java.
-
-In the meantime, see a working version in example/QMaze.jar (run `java -jar example/QMaze.jar`). Try to get a feel for how the hyperparameters work.
 
 ## Hyperparameters
 
@@ -27,18 +25,6 @@ The Learning Rate controls how fast the robot builds up a memory of the rewards 
 Press 'Instructions' to see more information about these.
 
 Have a play with these, and see what the effect is on learning and the optimal path. (See 'Creating your maze' below for info on how to use the UI).
-
-## Get coding!
-
-Complete the code in:
-
-AgentMemory
-
-Agent
-
-See hints.txt for... well, hints.
-
-Extras? Add some artwork! Check out the Assets class.
 
 ## Creating your maze
 
@@ -56,7 +42,3 @@ Once trained, click 'Show optimal path' to show the robot moving through the maz
 
 Please note - if training is not complete, in that the Q Table doesn't have values for earlier rooms, the optimal path will still involve a high element of randomness, so the optimal path won't be consistent. This will happen with larger mazes.
 
-
-## Problems, bugs, feature requests, questions?
-
-Open an issue or tweet/DM me on [Twitter](https://twitter.com/katharineCodes) for my e-mail address.
